--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>cool project</h1>
     <p> this is guided project</p>
     <div>this is another division</div>
 </body>
