--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>cool project</h1>
     <p> this is guided project</p>
     <div>this is another division</div>
+    <a href="https://www.google.com/">go to google</a>
 </body>
 </html>
